packages/yew-macro/tests/html_macro/component-fail.stderr
error: this opening tag has no corresponding closing tag
  --> $DIR/component-fail.rs:43:13
   |
43 |     html! { <Child> };
   |             ^^^^^^^

error: unexpected end of input, expected identifier
  --> $DIR/component-fail.rs:44:13
   |
44 |     html! { <Child:: /> };
   |             ^^^^^^^^^^^

error: expected expression following this `with`
  --> $DIR/component-fail.rs:45:20
   |
45 |     html! { <Child with /> };
   |                    ^^^^

error: `props` doesn't have a value. (hint: set the value to `true` or `false` for boolean attributes)
  --> $DIR/component-fail.rs:46:20
   |
46 |     html! { <Child props /> };
   |                    ^^^^^

error: this opening tag has no corresponding closing tag
  --> $DIR/component-fail.rs:47:13
   |
47 |     html! { <Child with props > };
   |             ^^^^^^^^^^^^^^^^^^^

error: there are two `with <props>` definitions for this component (note: you can only define `with <props>` once)
  --> $DIR/component-fail.rs:49:20
   |
49 |     html! { <Child with p1 with p2 /> };
   |                    ^^^^^^^

error: `ref` can only be set once
  --> $DIR/component-fail.rs:50:40
   |
50 |     html! { <Child with props ref={()} ref={()} /> };
   |                                        ^^^

error: `ref` can only be set once
  --> $DIR/component-fail.rs:51:40
   |
51 |     html! { <Child with props ref={()} ref={()} value=1 /> };
   |                                        ^^^

error: Using the `with props` syntax in combination with named props is not allowed (note: this does not apply to special props like `ref` and `key`)
  --> $DIR/component-fail.rs:52:40
   |
52 |     html! { <Child with props ref={()} value=1 ref={()} /> };
   |                                        ^^^^^

error: Using the `with props` syntax in combination with named props is not allowed (note: this does not apply to special props like `ref` and `key`)
  --> $DIR/component-fail.rs:53:31
   |
53 |     html! { <Child with props value=1 ref={()}  ref={()} /> };
   |                               ^^^^^

error: Using the `with props` syntax in combination with named props is not allowed (note: this does not apply to special props like `ref` and `key`)
  --> $DIR/component-fail.rs:54:20
   |
54 |     html! { <Child value=1 with props  ref={()}  ref={()} /> };
   |                    ^^^^^

error: Using the `with props` syntax in combination with named props is not allowed (note: this does not apply to special props like `ref` and `key`)
  --> $DIR/component-fail.rs:55:20
   |
55 |     html! { <Child value=1 ref={()} with props ref={()} /> };
   |                    ^^^^^

error: `ref` can only be set once
  --> $DIR/component-fail.rs:56:29
   |
56 |     html! { <Child ref={()} ref={()} value=1  with props  /> };
   |                             ^^^

error: Using the `with props` syntax in combination with named props is not allowed (note: this does not apply to special props like `ref` and `key`)
  --> $DIR/component-fail.rs:58:20
   |
58 |     html! { <Child value=1 with props /> };
   |                    ^^^^^

error: Using the `with props` syntax in combination with named props is not allowed (note: this does not apply to special props like `ref` and `key`)
  --> $DIR/component-fail.rs:59:31
   |
59 |     html! { <Child with props value=1 /> };
   |                               ^^^^^

error: expected identifier, found keyword `type`
  --> $DIR/component-fail.rs:60:20
   |
60 |     html! { <Child type=0 /> };
   |                    ^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
60 |     html! { <Child r#type=0 /> };
   |                    ^^^^^^

error: the property value must be either a literal or enclosed in braces. Consider adding braces around your expression.
  --> $DIR/component-fail.rs:61:24
   |
61 |     html! { <Child ref=() /> };
   |                        ^^

error: expected a valid Rust identifier
  --> $DIR/component-fail.rs:62:20
   |
62 |     html! { <Child invalid-prop-name=0 /> };
   |                    ^^^^^^^^^^^^^^^^^

error: expected an expression following this equals sign
  --> $DIR/component-fail.rs:64:26
   |
64 |     html! { <Child string= /> };
   |                          ^

error: `int` can only be specified once but is given here again
  --> $DIR/component-fail.rs:65:26
   |
65 |     html! { <Child int=1 int=2 int=3 /> };
   |                          ^^^

error: `int` can only be specified once but is given here again
  --> $DIR/component-fail.rs:65:32
   |
65 |     html! { <Child int=1 int=2 int=3 /> };
   |                                ^^^

error: `ref` can only be specified once
  --> $DIR/component-fail.rs:70:26
   |
70 |     html! { <Child int=1 ref={()} ref={()} /> };
   |                          ^^^

error: this closing tag has no corresponding opening tag
  --> $DIR/component-fail.rs:73:13
   |
73 |     html! { </Child> };
   |             ^^^^^^^^

error: this opening tag has no corresponding closing tag
  --> $DIR/component-fail.rs:74:13
   |
74 |     html! { <Child><Child></Child> };
   |             ^^^^^^^

error: only one root html element is allowed (hint: you can wrap multiple html elements in a fragment `<></>`)
  --> $DIR/component-fail.rs:75:28
   |
75 |     html! { <Child></Child><Child></Child> };
   |                            ^^^^^^^^^^^^^^^

error: cannot specify the `children` prop when the component already has children
  --> $DIR/component-fail.rs:94:26
   |
94 |         <ChildContainer {children}>
   |                          ^^^^^^^^

error: only one root html element is allowed (hint: you can wrap multiple html elements in a fragment `<></>`)
   --> $DIR/component-fail.rs:101:9
    |
101 |         <span>{ 2 }</span>
    |         ^^^^^^^^^^^^^^^^^^

error: only simple identifiers are allowed in the shorthand property syntax
   --> $DIR/component-fail.rs:104:21
    |
104 |     html! { <Child {std::f64::consts::PI} /> };
    |                     ^^^^^^^^^^^^^^^^^^^^

error: missing label for property value. If trying to use the shorthand property syntax, only identifiers may be used
   --> $DIR/component-fail.rs:105:21
    |
105 |     html! { <Child {7 + 6} /> };
    |                     ^^^^^

error: missing label for property value. If trying to use the shorthand property syntax, only identifiers may be used
   --> $DIR/component-fail.rs:106:21
    |
106 |     html! { <Child {children.len()} /> };
    |                     ^^^^^^^^^^^^^^

error[E0425]: cannot find value `blah` in this scope
  --> $DIR/component-fail.rs:57:25
   |
57 |     html! { <Child with blah /> };
   |                         ^^^^ not found in this scope

error[E0609]: no field `r#type` on type `ChildProperties`
  --> $DIR/component-fail.rs:60:20
   |
60 |     html! { <Child type=0 /> };
   |                    ^^^^ unknown field
   |
   = note: available fields are: `string`, `int`

error[E0599]: no method named `r#type` found for struct `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/component-fail.rs:60:20
   |
4  | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `r#type` not found for this
...
60 |     html! { <Child type=0 /> };
   |                    ^^^^ method not found in `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>`

error[E0609]: no field `unknown` on type `ChildProperties`
  --> $DIR/component-fail.rs:63:20
   |
63 |     html! { <Child unknown="unknown" /> };
   |                    ^^^^^^^ unknown field
   |
   = note: available fields are: `string`, `int`

error[E0599]: no method named `unknown` found for struct `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/component-fail.rs:63:20
   |
4  | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `unknown` not found for this
...
63 |     html! { <Child unknown="unknown" /> };
   |                    ^^^^^^^ method not found in `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>`

error[E0277]: the trait bound `(): IntoPropValue<String>` is not satisfied
  --> $DIR/component-fail.rs:66:33
   |
66 |     html! { <Child int=1 string={} /> };
   |                                 ^^ the trait `IntoPropValue<String>` is not implemented for `()`

error[E0277]: the trait bound `{integer}: IntoPropValue<String>` is not satisfied
  --> $DIR/component-fail.rs:67:33
   |
67 |     html! { <Child int=1 string=3 /> };
   |                                 ^ the trait `IntoPropValue<String>` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'static str as IntoPropValue<Cow<'static, str>>>
             <&'static str as IntoPropValue<Option<Cow<'static, str>>>>
             <&'static str as IntoPropValue<Option<String>>>
             <&'static str as IntoPropValue<String>>
           and 11 others

error[E0277]: the trait bound `{integer}: IntoPropValue<String>` is not satisfied
  --> $DIR/component-fail.rs:68:34
   |
68 |     html! { <Child int=1 string={3} /> };
   |                                  ^ the trait `IntoPropValue<String>` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <&'static str as IntoPropValue<Cow<'static, str>>>
             <&'static str as IntoPropValue<Option<Cow<'static, str>>>>
             <&'static str as IntoPropValue<Option<String>>>
             <&'static str as IntoPropValue<String>>
           and 11 others

error[E0308]: mismatched types
  --> $DIR/component-fail.rs:69:31
   |
69 |     html! { <Child int=1 ref={()} /> };
   |                               ^^ expected struct `NodeRef`, found `()`

error[E0277]: the trait bound `u32: IntoPropValue<i32>` is not satisfied
  --> $DIR/component-fail.rs:71:24
   |
71 |     html! { <Child int=0u32 /> };
   |                        ^^^^ the trait `IntoPropValue<i32>` is not implemented for `u32`

error[E0599]: no method named `string` found for struct `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/component-fail.rs:72:20
   |
4  | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `string` not found for this
...
72 |     html! { <Child string="abc" /> };
   |                    ^^^^^^ method not found in `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>`

error[E0609]: no field `children` on type `ChildProperties`
  --> $DIR/component-fail.rs:76:14
   |
76 |     html! { <Child>{ "Not allowed" }</Child> };
   |              ^^^^^ unknown field
   |
   = note: available fields are: `string`, `int`

error[E0599]: no method named `children` found for struct `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/component-fail.rs:76:14
   |
4  | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `children` not found for this
...
76 |     html! { <Child>{ "Not allowed" }</Child> };
   |              ^^^^^ method not found in `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>`

error[E0609]: no field `children` on type `ChildProperties`
  --> $DIR/component-fail.rs:80:10
   |
80 |         <Child with ChildProperties { string: "hello".to_owned(), int: 5 }>
   |          ^^^^^ unknown field
   |
   = note: available fields are: `string`, `int`

error[E0599]: no method named `build` found for struct `ChildContainerPropertiesBuilder<ChildContainerPropertiesBuilderStep_missing_required_prop_children>` in the current scope
  --> $DIR/component-fail.rs:85:14
   |
24 | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `build` not found for this
...
85 |     html! { <ChildContainer /> };
   |              ^^^^^^^^^^^^^^ method not found in `ChildContainerPropertiesBuilder<ChildContainerPropertiesBuilderStep_missing_required_prop_children>`

error[E0599]: no method named `build` found for struct `ChildContainerPropertiesBuilder<ChildContainerPropertiesBuilderStep_missing_required_prop_children>` in the current scope
  --> $DIR/component-fail.rs:86:14
   |
24 | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `build` not found for this
...
86 |     html! { <ChildContainer></ChildContainer> };
   |              ^^^^^^^^^^^^^^ method not found in `ChildContainerPropertiesBuilder<ChildContainerPropertiesBuilderStep_missing_required_prop_children>`

error[E0277]: the trait bound `VChild<Child>: From<yew::virtual_dom::VText>` is not satisfied
  --> $DIR/component-fail.rs:87:31
   |
87 |     html! { <ChildContainer>{ "Not allowed" }</ChildContainer> };
   |                               ^^^^^^^^^^^^^ the trait `From<yew::virtual_dom::VText>` is not implemented for `VChild<Child>`
   |
   = note: required because of the requirements on the impl of `Into<VChild<Child>>` for `yew::virtual_dom::VText`
   = note: required by `into`

error[E0277]: the trait bound `VChild<Child>: From<VNode>` is not satisfied
  --> $DIR/component-fail.rs:88:29
   |
88 |     html! { <ChildContainer><></></ChildContainer> };
   |                             ^ the trait `From<VNode>` is not implemented for `VChild<Child>`
   |
   = note: required because of the requirements on the impl of `Into<VChild<Child>>` for `VNode`
   = note: required by `into`

error[E0277]: the trait bound `VChild<Child>: From<VNode>` is not satisfied
  --> $DIR/component-fail.rs:89:30
   |
89 |     html! { <ChildContainer><other /></ChildContainer> };
   |                              ^^^^^ the trait `From<VNode>` is not implemented for `VChild<Child>`
   |
   = note: required because of the requirements on the impl of `Into<VChild<Child>>` for `VNode`
   = note: required by `into`
